@@ -1,3 +1,9 @@
+2004-11-24  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/interface.c: (toggle_infoview): Fixed (More|Less) labels.
+	
+	* src/procman.c: Added missing #include for old libgtop.
+
 2004-11-22  Benoît Dejean  <tazforever@dlfp.org>
 
 	* src/proctable.c: (sort_ints): Fixed stupid typo. CPU and RES columns
